[package]
name = "http_command_executor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
system_shutdown = "3.0.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]